; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ide/extr_ide-floppy.c_ide_floppy_create_read_capacity_cmd.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ide/extr_ide-floppy.c_ide_floppy_create_read_capacity_cmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ide_atapi_pc = type { i32*, i32 }

@GPCMD_READ_FORMAT_CAPACITIES = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ide_floppy_create_read_capacity_cmd(%struct.ide_atapi_pc* %0) #0 {
  %2 = alloca %struct.ide_atapi_pc*, align 8
  store %struct.ide_atapi_pc* %0, %struct.ide_atapi_pc** %2, align 8
  %3 = load %struct.ide_atapi_pc*, %struct.ide_atapi_pc** %2, align 8
  %4 = call i32 @ide_init_pc(%struct.ide_atapi_pc* %3)
  %5 = load i32, i32* @GPCMD_READ_FORMAT_CAPACITIES, align 4
  %6 = load %struct.ide_atapi_pc*, %struct.ide_atapi_pc** %2, align 8
  %7 = getelementptr inbounds %struct.ide_atapi_pc, %struct.ide_atapi_pc* %6, i32 0, i32 0
  %8 = load i32*, i32** %7, align 8
  %9 = getelementptr inbounds i32, i32* %8, i64 0
  store i32 %5, i32* %9, align 4
  %10 = load %struct.ide_atapi_pc*, %struct.ide_atapi_pc** %2, align 8
  %11 = getelementptr inbounds %struct.ide_atapi_pc, %struct.ide_atapi_pc* %10, i32 0, i32 0
  %12 = load i32*, i32** %11, align 8
  %13 = getelementptr inbounds i32, i32* %12, i64 7
  store i32 255, i32* %13, align 4
  %14 = load %struct.ide_atapi_pc*, %struct.ide_atapi_pc** %2, align 8
  %15 = getelementptr inbounds %struct.ide_atapi_pc, %struct.ide_atapi_pc* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  %17 = getelementptr inbounds i32, i32* %16, i64 8
  store i32 255, i32* %17, align 4
  %18 = load %struct.ide_atapi_pc*, %struct.ide_atapi_pc** %2, align 8
  %19 = getelementptr inbounds %struct.ide_atapi_pc, %struct.ide_atapi_pc* %18, i32 0, i32 1
  store i32 255, i32* %19, align 8
  ret void
}

declare dso_local i32 @ide_init_pc(%struct.ide_atapi_pc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
